src/objects/FTE_Data_Record_Status__c.object
<CustomObject>
    <label>FTE Data Record Status</label>
    <nameField>
        <label>FTE Data Record Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FTE Data Record Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Line_Number_Text__c</fullName>
        <formula>TEXT(Line_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Number Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient hours</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>